# serializer version: 1
# name: TestRegressionOutputs.test_custom_model_with_predict_model
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.6631  |    0.09297 |   -0.14761 |     0.15157 |     -0.05656 |   -0.52442 |   -0.47834 |    -0.25311 |
      |  2 |            2 | 2.20594 | -0.49857 |    0.15482 |   -0.32475 |    -0.17408 |      0.0359  |    0.20746 |    0.00076 |     0.15349 |
      |  3 |            3 | 2.20594 |  0.13851 |    0.30769 |   -0.09097 |    -0.12151 |      0.05378 |    0.34747 |    0.11168 |     0.18189 |
      |  4 |            4 | 2.20594 |  0.47743 |   -0.17062 |    0.11487 |     0.05729 |     -0.2122  |   -0.09988 |   -0.05946 |     0.43085 |
      |  5 |            5 | 2.20594 | -0.45087 |    0.01716 |   -0.1867  |     0.11553 |      0.09861 |    0.10933 |    0.39648 |     0.41705 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.02286 |    0.03474 |    0.02038 |     0.01833 |      0.02025 |    0.0271  |    0.03978 |     0.02078 |
      |  2 |            2 |      0 |  0.08432 |    0.06926 |    0.0492  |     0.06087 |      0.0484  |    0.05833 |    0.09296 |     0.11258 |
      |  3 |            3 |      0 |  0.05753 |    0.057   |    0.04468 |     0.03893 |      0.04264 |    0.04047 |    0.07595 |     0.04222 |
      |  4 |            4 |      0 |  0.03019 |    0.03978 |    0.02246 |     0.03169 |      0.02587 |    0.03335 |    0.05233 |     0.05301 |
      |  5 |            5 |      0 |  0.04471 |    0.03839 |    0.03179 |     0.02914 |      0.03581 |    0.02917 |    0.08027 |     0.02848 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_arf_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.85917 |   -0.14159 |   -0.16572 |     0.02745 |     -0.12557 |   -0.26462 |    0.01674 |    -0.00531 |
      |  2 |            2 | 2.20594 | -0.66863 |    0.1121  |   -0.55132 |    -0.00696 |     -0.01079 |    0.03102 |   -0.07223 |    -0.0623  |
      |  3 |            3 | 2.20594 |  0.35593 |    0.61171 |    0.35469 |    -0.72199 |     -0.10475 |    0.60792 |   -0.04944 |     0.8931  |
      |  4 |            4 | 2.20594 |  0.26771 |    0.06044 |    0.10944 |     0.10588 |      0.03373 |   -0.02272 |   -0.03708 |    -0.04008 |
      |  5 |            5 | 2.20594 | -0.18878 |    0.01486 |   -0.23432 |     0.23632 |      0.15829 |    0.11698 |   -0.09362 |     0.12555 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.06641 |    0.04356 |    0.03941 |     0.08097 |      0.03514 |    0.07109 |    0.05072 |     0.00234 |
      |  2 |            2 |      0 |  0.07005 |    0.08096 |    0.15469 |     0.10365 |      0.04824 |    0.05324 |    0.07939 |     0.01388 |
      |  3 |            3 |      0 |  0.36994 |    0.46687 |    0.40257 |     0.49817 |      0.27302 |    0.35977 |    0.57207 |     0.21282 |
      |  4 |            4 |      0 |  0.08634 |    0.11516 |    0.08937 |     0.09466 |      0.06057 |    0.04503 |    0.13272 |     0.04277 |
      |  5 |            5 |      0 |  0.06895 |    0.07884 |    0.13138 |     0.09583 |      0.05205 |    0.04129 |    0.09195 |     0.02257 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_combined_approach_1
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.87245 |    0.07518 |   -0.18881 |     0.06803 |      0.01211 |   -0.14934 |   -0.29816 |    -0.16435 |
      |  2 |            2 | 2.20594 | -0.80205 |   -0.01826 |   -0.27213 |     0.00452 |     -0.11825 |   -0.00962 |    0.00125 |    -0.01457 |
      |  3 |            3 | 2.20594 |  0.3748  |    0.51491 |   -0.0432  |    -0.26871 |      0.14061 |    0.86284 |    0.10048 |     0.26544 |
      |  4 |            4 | 2.20594 |  0.48105 |   -0.12368 |    0.07928 |     0.08208 |     -0.09599 |   -0.17494 |    0.14934 |     0.08017 |
      |  5 |            5 | 2.20594 | -0.12155 |   -0.14252 |   -0.14481 |     0.07017 |      0.1134  |    0.02833 |    0.08806 |     0.24419 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.07621 |    0.07909 |    0.12307 |     0.0743  |      0.09383 |    0.07752 |    0.10133 |     0.07613 |
      |  2 |            2 |      0 |  0.03042 |    0.05877 |    0.07385 |     0.05342 |      0.10159 |    0.03939 |    0.05449 |     0.08315 |
      |  3 |            3 |      0 |  0.05785 |    0.10618 |    0.08023 |     0.13013 |      0.07203 |    0.08943 |    0.05915 |     0.06395 |
      |  4 |            4 |      0 |  0.03719 |    0.06666 |    0.06654 |     0.04322 |      0.0679  |    0.04114 |    0.04371 |     0.03571 |
      |  5 |            5 |      0 |  0.07183 |    0.09088 |    0.1137  |     0.06233 |      0.09801 |    0.07784 |    0.07095 |     0.0611  |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_combined_approach_2
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.75879 |   -0.04131 |   -0.20072 |     0.06422 |     -0.02328 |   -0.20676 |   -0.31072 |    -0.04044 |
      |  2 |            2 | 2.20594 | -0.66825 |   -0.07936 |   -0.38746 |    -0.12452 |      0.03479 |    0.01264 |   -0.09778 |     0.08084 |
      |  3 |            3 | 2.20594 |  0.4714  |    0.67726 |    0.06659 |    -0.25862 |      0.01056 |    0.75443 |    0.08563 |     0.13993 |
      |  4 |            4 | 2.20594 |  0.32279 |   -0.06729 |    0.05933 |     0.07408 |     -0.03967 |   -0.11844 |    0.15195 |     0.09458 |
      |  5 |            5 | 2.20594 | -0.22871 |   -0.07568 |   -0.12134 |     0.01589 |      0.10022 |    0.10962 |    0.15575 |     0.17952 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.05134 |    0.03206 |    0.06605 |     0.04993 |      0.04571 |    0.04828 |    0.07866 |     0.05289 |
      |  2 |            2 |      0 |  0.04275 |    0.03709 |    0.06557 |     0.05739 |      0.03041 |    0.02982 |    0.06984 |     0.04915 |
      |  3 |            3 |      0 |  0.06341 |    0.06117 |    0.08356 |     0.11361 |      0.06321 |    0.06993 |    0.11372 |     0.09758 |
      |  4 |            4 |      0 |  0.02471 |    0.02208 |    0.03299 |     0.03953 |      0.02735 |    0.022   |    0.04402 |     0.045   |
      |  5 |            5 |      0 |  0.06244 |    0.046   |    0.05653 |     0.05045 |      0.05813 |    0.04234 |    0.10441 |     0.0734  |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_copula_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.85618 |   -0.03296 |   -0.3067  |     0.00744 |     -0.0559  |   -0.11729 |   -0.11419 |    -0.04202 |
      |  2 |            2 | 2.20594 | -0.55904 |   -0.03494 |   -0.33484 |    -0.10293 |     -0.04619 |   -0.03696 |   -0.07732 |    -0.03689 |
      |  3 |            3 | 2.20594 |  0.49611 |    0.53606 |   -0.09602 |    -0.03683 |      0.05172 |    0.83207 |   -0.0008  |     0.16484 |
      |  4 |            4 | 2.20594 |  0.389   |   -0.01092 |    0.1807  |     0.04792 |     -0.00923 |   -0.17428 |    0.04089 |     0.01325 |
      |  5 |            5 | 2.20594 | -0.0796  |   -0.07269 |    0.04774 |     0.06076 |      0.06567 |    0.06438 |    0.00159 |     0.04741 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.00859 |    0.00998 |    0.01623 |     0.01254 |      0.01415 |    0.00637 |    0.01841 |     0.01375 |
      |  2 |            2 |      0 |  0.00927 |    0.00773 |    0.01177 |     0.01402 |      0.01096 |    0.00687 |    0.01317 |     0.01152 |
      |  3 |            3 |      0 |  0.02863 |    0.03137 |    0.05461 |     0.04022 |      0.03448 |    0.01785 |    0.0499  |     0.05521 |
      |  4 |            4 |      0 |  0.00928 |    0.01199 |    0.0133  |     0.01265 |      0.00957 |    0.00586 |    0.01371 |     0.01759 |
      |  5 |            5 |      0 |  0.01497 |    0.01632 |    0.03052 |     0.02781 |      0.02496 |    0.01087 |    0.03402 |     0.03427 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_ctree_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.94829 |    0.05168 |   -0.28792 |    -0.08663 |     -0.03466 |   -0.1954  |   -0.36025 |     0.34368 |
      |  2 |            2 | 2.20594 | -0.36694 |   -0.00624 |   -0.50371 |     0.02088 |     -0.00313 |   -0.04426 |   -0.11283 |    -0.21286 |
      |  3 |            3 | 2.20594 |  0.39331 |    0.65834 |   -0.00301 |    -0.00695 |     -0.06168 |    0.82555 |   -0.00429 |     0.1459  |
      |  4 |            4 | 2.20594 |  0.18777 |   -0.12008 |    0.25477 |     0.01512 |     -0.07788 |   -0.19346 |    0.08324 |     0.32784 |
      |  5 |            5 | 2.20594 |  0.33986 |    0.02665 |   -0.22704 |     0.0064  |      0.008   |    0.13787 |   -0.41635 |     0.25988 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.05715 |    0.05647 |    0.05785 |     0.0812  |      0.04819 |    0.09542 |    0.11066 |     0.07565 |
      |  2 |            2 |      0 |  0.05203 |    0.06166 |    0.06198 |     0.05198 |      0.04713 |    0.04756 |    0.14709 |     0.06878 |
      |  3 |            3 |      0 |  0.05244 |    0.06661 |    0.04537 |     0.0661  |      0.05203 |    0.04925 |    0.10111 |     0.06351 |
      |  4 |            4 |      0 |  0.03822 |    0.05186 |    0.05038 |     0.06418 |      0.04849 |    0.04309 |    0.12398 |     0.08369 |
      |  5 |            5 |      0 |  0.04357 |    0.04107 |    0.05945 |     0.05662 |      0.03377 |    0.04664 |    0.05584 |     0.0496  |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_empirical_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.67078 |    0.05351 |   -0.11803 |     0.13902 |     -0.02351 |   -0.27005 |   -0.44179 |    -0.18617 |
      |  2 |            2 | 2.20594 | -0.54512 |   -0.00443 |   -0.41955 |    -0.19652 |      0.02707 |    0.18104 |   -0.22543 |    -0.04616 |
      |  3 |            3 | 2.20594 |  0.30413 |    0.58312 |   -0.05987 |    -0.19637 |      0.06819 |    0.83779 |    0.14126 |     0.26891 |
      |  4 |            4 | 2.20594 |  0.34405 |   -0.06951 |    0.03497 |     0.12029 |     -0.17143 |   -0.11648 |    0.13832 |     0.19712 |
      |  5 |            5 | 2.20594 | -0.36694 |   -0.10265 |   -0.09769 |     0.16094 |      0.13328 |    0.00428 |    0.04625 |     0.3578  |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.01355 |    0.01159 |    0.01175 |     0.01267 |      0.01094 |    0.00991 |    0.01039 |     0.00904 |
      |  2 |            2 |      0 |  0.02082 |    0.02525 |    0.02284 |     0.02082 |      0.02336 |    0.0187  |    0.02169 |     0.02312 |
      |  3 |            3 |      0 |  0.01649 |    0.01739 |    0.01636 |     0.01673 |      0.01395 |    0.017   |    0.01781 |     0.01536 |
      |  4 |            4 |      0 |  0.00933 |    0.0086  |    0.008   |     0.00824 |      0.00843 |    0.00878 |    0.00996 |     0.00745 |
      |  5 |            5 |      0 |  0.0193  |    0.01904 |    0.02102 |     0.01745 |      0.01995 |    0.01597 |    0.02068 |     0.01776 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_empirical_iterative
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.62736 |    0.09247 |   -0.11479 |     0.12097 |     -0.0377  |   -0.27829 |   -0.46275 |    -0.21035 |
      |  2 |            2 | 2.20594 | -0.46528 |    0.00811 |   -0.40205 |    -0.21069 |      0.01637 |    0.12946 |   -0.25838 |    -0.04666 |
      |  3 |            3 | 2.20594 |  0.29016 |    0.6159  |   -0.0486  |    -0.25393 |      0.06539 |    0.83737 |    0.14383 |     0.29705 |
      |  4 |            4 | 2.20594 |  0.36286 |   -0.07814 |    0.01824 |     0.13653 |     -0.17493 |   -0.10338 |    0.14159 |     0.17454 |
      |  5 |            5 | 2.20594 | -0.26604 |   -0.09192 |   -0.10264 |     0.15812 |      0.12915 |   -0.03625 |    0.02418 |     0.32067 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.0178  |    0.01945 |    0.0201  |     0.01822 |      0.02184 |    0.01512 |    0.01679 |     0.02142 |
      |  2 |            2 |      0 |  0.0317  |    0.03868 |    0.02809 |     0.02946 |      0.03044 |    0.02182 |    0.04535 |     0.0477  |
      |  3 |            3 |      0 |  0.02298 |    0.03047 |    0.02875 |     0.02571 |      0.03159 |    0.02435 |    0.0226  |     0.02096 |
      |  4 |            4 |      0 |  0.01495 |    0.01385 |    0.01489 |     0.01265 |      0.01758 |    0.01308 |    0.01517 |     0.01972 |
      |  5 |            5 |      0 |  0.0291  |    0.02542 |    0.02534 |     0.02647 |      0.02784 |    0.02433 |    0.04191 |     0.03003 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_empirical_with_causal_ordering
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -1.27775 |   -0.00183 |   -0.02948 |    -0.00044 |     -0.0309  |   -0.04662 |   -0.1189  |    -0.01188 |
      |  2 |            2 | 2.20594 | -0.53826 |   -0.12166 |   -0.52388 |     0.03042 |     -0.00868 |    0.06354 |   -0.1096  |    -0.021   |
      |  3 |            3 | 2.20594 | -0.29501 |    0.99126 |    0.67967 |    -0.04074 |     -0.0774  |    0.64874 |    0.01707 |     0.02357 |
      |  4 |            4 | 2.20594 |  0.64518 |   -0.27115 |   -0.03037 |     0.04566 |     -0.00453 |   -0.04167 |    0.04311 |     0.0911  |
      |  5 |            5 | 2.20594 |  0.09563 |   -0.20705 |    0.01533 |     0.04148 |      0.09687 |   -0.07052 |    0.08376 |     0.07977 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.00024 |    0.00108 |    0.00108 |     0.00219 |      0.00747 |    0.00316 |    0.0031  |     0.00373 |
      |  2 |            2 |      0 |  0.00063 |    0.00279 |    0.00279 |     0.00546 |      0.01035 |    0.0074  |    0.0066  |     0.00759 |
      |  3 |            3 |      0 |  0.0019  |    0.00839 |    0.00839 |     0.02116 |      0.02757 |    0.01621 |    0.02402 |     0.02298 |
      |  4 |            4 |      0 |  0.00085 |    0.00377 |    0.00377 |     0.00787 |      0.01032 |    0.01021 |    0.00979 |     0.01512 |
      |  5 |            5 |      0 |  0.00186 |    0.0082  |    0.0082  |     0.02363 |      0.03199 |    0.03768 |    0.02234 |     0.02676 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_empirical_with_groups
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |        A |        B |        C |
      |---:|-------------:|--------:|---------:|---------:|---------:|
      |  1 |            1 | 2.20594 | -0.59489 | -0.23107 | -0.69184 |
      |  2 |            2 | 2.20594 | -1.25694 | -0.21856 |  0.24639 |
      |  3 |            3 | 2.20594 |  0.9642  |  0.53713 |  0.44584 |
      |  4 |            4 | 2.20594 |  0.21329 | -0.00274 |  0.26676 |
      |  5 |            5 | 2.20594 | -0.47688 |  0.00816 |  0.60399 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   A |   B |   C |
      |---:|-------------:|-------:|----:|----:|----:|
      |  1 |            1 |      0 |  -0 |  -0 |  -0 |
      |  2 |            2 |      0 |  -0 |  -0 |   0 |
      |  3 |            3 |      0 |   0 |   0 |   0 |
      |  4 |            4 |      0 |   0 |  -0 |   0 |
      |  5 |            5 |      0 |  -0 |   0 |   0 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_gaussian_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.83335 |   -0.00682 |   -0.36054 |     0.00445 |     -0.09792 |   -0.07687 |   -0.07615 |    -0.07058 |
      |  2 |            2 | 2.20594 | -0.81859 |   -0.01905 |   -0.24765 |    -0.07804 |     -0.05341 |   -0.00965 |    0.01453 |    -0.01724 |
      |  3 |            3 | 2.20594 |  0.47854 |    0.5936  |   -0.14883 |    -0.00354 |      0.03338 |    0.84695 |    0.01117 |     0.1359  |
      |  4 |            4 | 2.20594 |  0.27408 |   -0.04085 |    0.17806 |     0.08542 |      0.01966 |   -0.17922 |    0.08376 |     0.05641 |
      |  5 |            5 | 2.20594 | -0.3357  |   -0.06143 |    0.05725 |     0.1164  |      0.14853 |    0.03071 |    0.07169 |     0.10781 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.02772 |    0.03481 |    0.05573 |     0.05157 |      0.06122 |    0.02014 |    0.06033 |     0.05792 |
      |  2 |            2 |      0 |  0.02176 |    0.02329 |    0.02903 |     0.03922 |      0.04003 |    0.0167  |    0.02976 |     0.03464 |
      |  3 |            3 |      0 |  0.02713 |    0.02827 |    0.03724 |     0.03168 |      0.03904 |    0.02043 |    0.04009 |     0.03115 |
      |  4 |            4 |      0 |  0.01288 |    0.02379 |    0.01708 |     0.00955 |      0.02071 |    0.00913 |    0.01607 |     0.01284 |
      |  5 |            5 |      0 |  0.0219  |    0.02482 |    0.04116 |     0.04056 |      0.03173 |    0.01874 |    0.05156 |     0.04125 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_gaussian_iterative_low_coalitions
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.70714 |   -0.11303 |   -0.3443  |    -0.18247 |     -0.05604 |   -0.09615 |   -0.00325 |    -0.01542 |
      |  2 |            2 | 2.20594 | -0.73753 |    0.00332 |   -0.33554 |    -0.22071 |     -0.0185  |    0.02081 |    0.03537 |     0.02367 |
      |  3 |            3 | 2.20594 |  0.44689 |    0.63538 |   -0.12957 |    -0.15303 |      0.03883 |    0.91725 |    0.03978 |     0.15164 |
      |  4 |            4 | 2.20594 |  0.26877 |   -0.0554  |    0.10047 |     0.0477  |      0.02733 |   -0.10415 |    0.07579 |     0.11681 |
      |  5 |            5 | 2.20594 | -0.44444 |   -0.06074 |    0.01669 |     0.18223 |      0.08385 |    0.14388 |    0.04136 |     0.17243 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.13949 |    0.14809 |    0.11874 |     0.14089 |      0.06621 |    0.06215 |    0.14617 |     0.05249 |
      |  2 |            2 |      0 |  0.09453 |    0.0811  |    0.10734 |     0.10601 |      0.03406 |    0.0933  |    0.08172 |     0.03317 |
      |  3 |            3 |      0 |  0.06366 |    0.14295 |    0.10001 |     0.25044 |      0.02522 |    0.26891 |    0.09431 |     0.0338  |
      |  4 |            4 |      0 |  0.07331 |    0.081   |    0.0437  |     0.06915 |      0.04254 |    0.05178 |    0.08281 |     0.0213  |
      |  5 |            5 |      0 |  0.13812 |    0.12474 |    0.13332 |     0.1376  |      0.04328 |    0.04629 |    0.11564 |     0.04727 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_gaussian_with_groups
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |        A |        B |        C |
      |---:|-------------:|--------:|---------:|---------:|---------:|
      |  1 |            1 | 2.20594 | -1.1461  | -0.14039 | -0.2313  |
      |  2 |            2 | 2.20594 | -1.14452 | -0.12377 |  0.03918 |
      |  3 |            3 | 2.20594 |  0.78014 |  0.8672  |  0.29983 |
      |  4 |            4 | 2.20594 |  0.40895 | -0.12173 |  0.19009 |
      |  5 |            5 | 2.20594 | -0.3412  |  0.17143 |  0.30504 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   A |   B |   C |
      |---:|-------------:|-------:|----:|----:|----:|
      |  1 |            1 |      0 |  -0 |  -0 |  -0 |
      |  2 |            2 |      0 |  -0 |  -0 |   0 |
      |  3 |            3 |      0 |   0 |   0 |   0 |
      |  4 |            4 |      0 |   0 |  -0 |   0 |
      |  5 |            5 |      0 |  -0 |   0 |   0 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_independence_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -1.2342  |   -0.05968 |    0.04096 |     0.00944 |     -0.01931 |   -0.13173 |   -0.09298 |    -0.03028 |
      |  2 |            2 | 2.20594 | -0.86088 |   -0.05537 |   -0.12498 |    -0.02078 |     -0.02106 |   -0.04087 |   -0.08689 |    -0.01827 |
      |  3 |            3 | 2.20594 |  0.0921  |    0.64417 |    0.14767 |    -0.00573 |      0.01958 |    0.93659 |    0.00768 |     0.10511 |
      |  4 |            4 | 2.20594 |  0.7139  |   -0.11097 |   -0.07744 |     0.03202 |      0.00503 |   -0.15787 |    0.06964 |     0.00302 |
      |  5 |            5 | 2.20594 |  0.11139 |   -0.06577 |   -0.03507 |     0.02714 |      0.02723 |    0.0783  |   -0.02622 |     0.01827 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.00151 |    0.00177 |    0.00125 |     0.00144 |      0.00147 |    0.00182 |    0.00192 |     0.00141 |
      |  2 |            2 |      0 |  0.00148 |    0.00174 |    0.00204 |     0.00316 |      0.00191 |    0.00235 |    0.00521 |     0.00264 |
      |  3 |            3 |      0 |  0.00433 |    0.0069  |    0.00657 |     0.00715 |      0.00635 |    0.01089 |    0.01024 |     0.00897 |
      |  4 |            4 |      0 |  0.0025  |    0.0034  |    0.00418 |     0.00353 |      0.00255 |    0.00403 |    0.00494 |     0.00592 |
      |  5 |            5 |      0 |  0.00118 |    0.00119 |    0.00123 |     0.00122 |      0.00195 |    0.00074 |    0.00277 |     0.0015  |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_regression_separate_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.57435 |   -0.04447 |   -0.1864  |     0.03004 |     -0.03576 |   -0.26954 |   -0.26805 |    -0.16927 |
      |  2 |            2 | 2.20594 | -0.69289 |   -0.06756 |   -0.26917 |    -0.19663 |     -0.0726  |   -0.08731 |    0.17508 |    -0.01802 |
      |  3 |            3 | 2.20594 |  0.26774 |    0.27453 |    0.06048 |     0.18651 |      0.19787 |    0.79536 |   -0.06871 |     0.23339 |
      |  4 |            4 | 2.20594 |  0.38582 |   -0.09685 |    0.13663 |     0.01369 |     -0.01705 |   -0.20098 |    0.15821 |     0.09786 |
      |  5 |            5 | 2.20594 | -0.42581 |   -0.01472 |   -0.06943 |    -0.01767 |      0.00309 |    0.06746 |    0.28682 |     0.30553 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.05637 |    0.04809 |    0.03029 |     0.03215 |      0.04321 |    0.03104 |    0.0732  |     0.04608 |
      |  2 |            2 |      0 |  0.08577 |    0.09461 |    0.05055 |     0.05488 |      0.08494 |    0.07153 |    0.10754 |     0.08387 |
      |  3 |            3 |      0 |  0.11177 |    0.11862 |    0.07473 |     0.08217 |      0.11101 |    0.09496 |    0.14156 |     0.11876 |
      |  4 |            4 |      0 |  0.01685 |    0.01004 |    0.00976 |     0.01005 |      0.00735 |    0.0076  |    0.01884 |     0.01674 |
      |  5 |            5 |      0 |  0.05354 |    0.04178 |    0.02881 |     0.0315  |      0.03826 |    0.0277  |    0.06783 |     0.04754 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_regression_separate_ranger
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.53865 |    0.28713 |   -0.22705 |     0.00285 |     -0.07217 |   -0.31465 |   -0.29476 |    -0.36049 |
      |  2 |            2 | 2.20594 | -0.21527 |   -0.15154 |   -0.3543  |    -0.11113 |      0.08044 |    0.15686 |   -0.39334 |    -0.24083 |
      |  3 |            3 | 2.20594 |  0.07849 |    0.42043 |    0.03585 |    -0.15841 |      0.34864 |    0.43726 |    0.22442 |     0.56048 |
      |  4 |            4 | 2.20594 |  0.28771 |   -0.14708 |    0.03685 |     0.08457 |     -0.13905 |   -0.09931 |    0.05085 |     0.40277 |
      |  5 |            5 | 2.20594 | -0.01143 |    0.0073  |   -0.16115 |     0.19307 |      0.00506 |    0.09279 |   -0.13149 |     0.14112 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.09517 |    0.09032 |    0.14328 |     0.11261 |      0.11321 |    0.11887 |    0.1198  |     0.16216 |
      |  2 |            2 |      0 |  0.06519 |    0.06881 |    0.0894  |     0.07948 |      0.06623 |    0.08841 |    0.07974 |     0.11422 |
      |  3 |            3 |      0 |  0.10685 |    0.16994 |    0.13785 |     0.1738  |      0.1865  |    0.14847 |    0.1223  |     0.25192 |
      |  4 |            4 |      0 |  0.03881 |    0.03381 |    0.07258 |     0.07261 |      0.03664 |    0.05181 |    0.04085 |     0.08958 |
      |  5 |            5 |      0 |  0.05246 |    0.06113 |    0.113   |     0.08562 |      0.06679 |    0.06718 |    0.11494 |     0.11447 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_regression_separate_splines
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.70455 |   -0.11235 |   -0.30909 |     0.13326 |     -0.02256 |   -0.36675 |   -0.01685 |    -0.11891 |
      |  2 |            2 | 2.20594 | -0.65628 |   -0.21501 |   -0.33408 |    -0.26317 |     -0.02373 |    0.09672 |    0.13467 |     0.03178 |
      |  3 |            3 | 2.20594 |  0.61246 |    0.65918 |   -0.01732 |    -0.02328 |      0.13753 |    0.44586 |    0.01817 |     0.11457 |
      |  4 |            4 | 2.20594 |  0.52883 |   -0.03415 |    0.13573 |     0.04529 |     -0.00049 |   -0.3383  |    0.05227 |     0.08814 |
      |  5 |            5 | 2.20594 | -0.54546 |   -0.14179 |   -0.0954  |     0.10701 |      0.00348 |    0.29875 |    0.36867 |     0.14001 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.07274 |    0.07749 |    0.05444 |     0.03538 |      0.03867 |    0.02552 |    0.0593  |     0.06768 |
      |  2 |            2 |      0 |  0.0697  |    0.08065 |    0.05764 |     0.03883 |      0.04606 |    0.02561 |    0.05907 |     0.06943 |
      |  3 |            3 |      0 |  0.05719 |    0.08662 |    0.06714 |     0.05648 |      0.07116 |    0.04017 |    0.08355 |     0.09706 |
      |  4 |            4 |      0 |  0.05865 |    0.07279 |    0.0426  |     0.02921 |      0.03841 |    0.02089 |    0.04611 |     0.05667 |
      |  5 |            5 |      0 |  0.02438 |    0.03732 |    0.01858 |     0.01552 |      0.01924 |    0.01021 |    0.02656 |     0.01966 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_regression_surrogate_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.88075 |   -0.05654 |   -0.02197 |    -0.04154 |     -0.01647 |   -0.41698 |   -0.05824 |    -0.02531 |
      |  2 |            2 | 2.20594 | -0.72146 |   -0.11561 |   -0.04492 |    -0.08494 |     -0.03368 |   -0.05766 |   -0.11909 |    -0.05174 |
      |  3 |            3 | 2.20594 |  0.19776 |    0.83361 |    0.10494 |     0.19842 |      0.07868 |    0.13469 |    0.27819 |     0.12087 |
      |  4 |            4 | 2.20594 | -0.14822 |    0.02457 |    0.5272  |     0.01805 |      0.00716 |    0.01225 |    0.02531 |     0.011   |
      |  5 |            5 | 2.20594 |  0.31007 |   -0.03981 |   -0.01547 |    -0.02925 |     -0.0116  |   -0.01985 |   -0.04101 |    -0.01782 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.0305  |    0.0266  |    0.0469  |     0.03152 |      0.04533 |    0.03617 |    0.02152 |     0.0357  |
      |  2 |            2 |      0 |  0.06237 |    0.05439 |    0.0959  |     0.06444 |      0.09269 |    0.07396 |    0.044   |     0.07301 |
      |  3 |            3 |      0 |  0.1457  |    0.12706 |    0.22402 |     0.15054 |      0.21652 |    0.17277 |    0.1028  |     0.17055 |
      |  4 |            4 |      0 |  0.01325 |    0.01156 |    0.02038 |     0.0137  |      0.0197  |    0.01572 |    0.00935 |     0.01552 |
      |  5 |            5 |      0 |  0.02148 |    0.01873 |    0.03302 |     0.02219 |      0.03192 |    0.02547 |    0.01515 |     0.02514 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_regression_surrogate_ranger
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.53025 |    0.00442 |   -0.13033 |     0.05623 |     -0.02987 |   -0.2961  |   -0.32255 |    -0.26937 |
      |  2 |            2 | 2.20594 | -0.25846 |   -0.09899 |   -0.35562 |    -0.10541 |     -0.04054 |    0.18497 |   -0.3233  |    -0.23175 |
      |  3 |            3 | 2.20594 |  0.30059 |    0.52301 |    0.0725  |    -0.38855 |      0.19455 |    0.27979 |    0.27925 |     0.68603 |
      |  4 |            4 | 2.20594 |  0.13953 |   -0.08647 |    0.19309 |     0.11737 |     -0.0588  |   -0.0606  |   -0.0123  |     0.2455  |
      |  5 |            5 | 2.20594 | -0.05533 |   -0.13792 |   -0.1284  |     0.06664 |      0.07691 |    0.1701  |   -0.13845 |     0.28173 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.03958 |    0.03161 |    0.07369 |     0.03643 |      0.03995 |    0.04094 |    0.03191 |     0.05391 |
      |  2 |            2 |      0 |  0.02541 |    0.02625 |    0.05468 |     0.05369 |      0.03346 |    0.03618 |    0.03757 |     0.04479 |
      |  3 |            3 |      0 |  0.05571 |    0.0748  |    0.09594 |     0.10239 |      0.08757 |    0.07983 |    0.06409 |     0.08596 |
      |  4 |            4 |      0 |  0.03048 |    0.02823 |    0.06666 |     0.02746 |      0.02688 |    0.02957 |    0.02151 |     0.0459  |
      |  5 |            5 |      0 |  0.03475 |    0.02738 |    0.05179 |     0.03324 |      0.03823 |    0.02693 |    0.03786 |     0.04142 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_regression_surrogate_ranger_tuned
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.51525 |   -0.00191 |   -0.12437 |     0.04571 |     -0.04138 |   -0.30205 |   -0.30636 |    -0.27219 |
      |  2 |            2 | 2.20594 | -0.25917 |   -0.10382 |   -0.3583  |    -0.1119  |     -0.0263  |    0.17493 |   -0.32655 |    -0.218   |
      |  3 |            3 | 2.20594 |  0.30952 |    0.52597 |    0.09226 |    -0.41433 |      0.19854 |    0.29643 |    0.30256 |     0.63622 |
      |  4 |            4 | 2.20594 |  0.13561 |   -0.08878 |    0.20088 |     0.09103 |     -0.0717  |   -0.04837 |   -0.00015 |     0.25881 |
      |  5 |            5 | 2.20594 | -0.03858 |   -0.1292  |   -0.12902 |     0.06926 |      0.0704  |    0.18347 |   -0.16193 |     0.27089 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.05032 |    0.03468 |    0.06377 |     0.0427  |      0.04885 |    0.0327  |    0.0333  |     0.06424 |
      |  2 |            2 |      0 |  0.03059 |    0.03158 |    0.05441 |     0.06572 |      0.05403 |    0.02565 |    0.03216 |     0.05303 |
      |  3 |            3 |      0 |  0.075   |    0.09026 |    0.09601 |     0.13131 |      0.1648  |    0.06782 |    0.07128 |     0.11765 |
      |  4 |            4 |      0 |  0.04262 |    0.03371 |    0.06571 |     0.03315 |      0.02978 |    0.02926 |    0.02289 |     0.05219 |
      |  5 |            5 |      0 |  0.03477 |    0.02782 |    0.03723 |     0.04289 |      0.04707 |    0.02334 |    0.03226 |     0.04835 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_vaeac_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -1.28648 |   -0.03409 |   -0.04519 |     0.05912 |     -0.07123 |   -0.05909 |   -0.11965 |     0.03881 |
      |  2 |            2 | 2.20594 | -0.87828 |    0.0308  |   -0.21891 |     0.19993 |     -0.1582  |   -0.0609  |   -0.06771 |    -0.07586 |
      |  3 |            3 | 2.20594 |  0.21228 |    0.73374 |    0.14871 |    -0.02891 |     -0.03618 |    0.89127 |   -0.03606 |     0.06232 |
      |  4 |            4 | 2.20594 |  0.72321 |   -0.05522 |   -0.13004 |    -0.00254 |     -0.03801 |   -0.08368 |    0.03194 |     0.03166 |
      |  5 |            5 | 2.20594 |  0.23823 |    0.13961 |   -0.1511  |     0.02497 |     -0.06867 |    0.12617 |   -0.0908  |    -0.08313 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.1353  |    0.08821 |    0.07966 |     0.09256 |      0.07946 |    0.0426  |    0.11029 |     0.00662 |
      |  2 |            2 |      0 |  0.09981 |    0.07697 |    0.09131 |     0.10748 |      0.05637 |    0.06753 |    0.08583 |     0.02111 |
      |  3 |            3 |      0 |  0.05187 |    0.15427 |    0.08328 |     0.21975 |      0.03107 |    0.23727 |    0.13569 |     0.01063 |
      |  4 |            4 |      0 |  0.07957 |    0.05771 |    0.07521 |     0.06364 |      0.04532 |    0.02867 |    0.07195 |     0.01409 |
      |  5 |            5 |      0 |  0.0582  |    0.10524 |    0.07137 |     0.06892 |      0.04529 |    0.03896 |    0.1136  |     0.0145  |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_xgb_regressor_empirical_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.67516 |    0.06213 |   -0.09352 |     0.12961 |     -0.04085 |   -0.28973 |   -0.56985 |    -0.22299 |
      |  2 |            2 | 2.20594 | -0.52671 |    0.00948 |   -0.47606 |    -0.20436 |      0.01873 |    0.15735 |   -0.21332 |    -0.02237 |
      |  3 |            3 | 2.20594 |  0.50977 |    0.70098 |    0.03569 |    -0.25121 |      0.0715  |    1.1158  |    0.10949 |     0.42354 |
      |  4 |            4 | 2.20594 |  0.37847 |   -0.07438 |   -0.03263 |     0.13387 |     -0.15325 |   -0.23545 |    0.07289 |     0.19819 |
      |  5 |            5 | 2.20594 | -0.44599 |   -0.1104  |   -0.11891 |     0.17978 |      0.13442 |   -0.03847 |    0.05417 |     0.33468 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 |  0.01373 |    0.01393 |    0.01502 |     0.01479 |      0.01474 |    0.01282 |    0.01268 |     0.0111  |
      |  2 |            2 |      0 |  0.02709 |    0.02984 |    0.03005 |     0.02315 |      0.02609 |    0.02161 |    0.02673 |     0.03089 |
      |  3 |            3 |      0 |  0.02182 |    0.02114 |    0.02466 |     0.02106 |      0.0233  |    0.01747 |    0.02273 |     0.02044 |
      |  4 |            4 |      0 |  0.01093 |    0.00935 |    0.01085 |     0.0096  |      0.00971 |    0.01029 |    0.01019 |     0.0107  |
      |  5 |            5 |      0 |  0.02148 |    0.0213  |    0.02612 |     0.02026 |      0.02135 |    0.02069 |    0.02435 |     0.02164 |
    ''',
  })
# ---
